--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Video Background -->
         <div class="video-background">
             <video autoplay loop muted playsinline>
-                <source src="images/Home-page-video.mp4" type="video/mp4">
+                <source src="images/Home-page-video (1).mp4" type="video/mp4">
             </video>
         </div>
         <div class="video-overlay"></div>
